Run-to-run alignment by digesting spectra with Haar Wavelet Transform

--- a/pwiz_tools/Shared/CommonUtil/CommonUtil.csproj
+++ b/pwiz_tools/Shared/CommonUtil/CommonUtil.csproj
@@ -161,6 +161,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Images.resx</DependentUpon>
     </Compile>
+    <Compile Include="Spectra\SpectrumDigester.cs" />
     <Compile Include="SystemUtil\CommonFormEx.cs">
       <SubType>Form</SubType>
     </Compile>
