--- a/pwiz_tools/Skyline/Skyline.csproj
+++ b/pwiz_tools/Skyline/Skyline.csproj
@@ -333,6 +333,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CommandArgUsage.resx</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Alignment\RunAlignmentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\Alignment\RunAlignmentForm.Designer.cs">
+      <DependentUpon>RunAlignmentForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\AuditLog\AuditLogExtraInfoForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -525,6 +531,7 @@
     </Compile>
     <Compile Include="Model\FullScanProperties.cs" />
     <Compile Include="Model\IdPeptideDocNode.cs" />
+    <Compile Include="Model\Results\DigestedSpectrumMetadata.cs" />
     <Compile Include="Model\Results\Spectra\SpectrumClassFilter.cs" />
     <Compile Include="Model\Results\Spectra\SpectrumFilterAutoComplete.cs" />
     <Compile Include="Model\SpectrumPropertiesResx.Designer.cs">
@@ -2274,6 +2281,9 @@
     <EmbeddedResource Include="CommandArgUsage.zh-CHS.resx">
       <DependentUpon>CommandArgUsage.resx</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Alignment\RunAlignmentForm.resx">
+      <DependentUpon>RunAlignmentForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\AuditLog\AuditLogExtraInfoForm.ja.resx">
       <DependentUpon>AuditLogExtraInfoForm.cs</DependentUpon>
