--- a/pwiz_tools/Skyline/Skyline.csproj
+++ b/pwiz_tools/Skyline/Skyline.csproj
@@ -336,12 +336,21 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CommandArgUsage.resx</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Alignment\Cache.cs" />
+    <Compile Include="Controls\Alignment\RetentionTimeSource.cs" />
+    <Compile Include="Controls\Alignment\RunAlignmentResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RunAlignmentResources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Alignment\RunAlignmentForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Controls\Alignment\RunAlignmentForm.Designer.cs">
       <DependentUpon>RunAlignmentForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Alignment\CurveSettings.cs" />
+    <Compile Include="Controls\Alignment\UserInterfaceObject.cs" />
     <Compile Include="Controls\AuditLog\AuditLogExtraInfoForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -2288,6 +2297,11 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CommandArgUsage.zh-CHS.resx">
       <DependentUpon>CommandArgUsage.resx</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Alignment\RunAlignmentResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>RunAlignmentResources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Alignment\RunAlignmentForm.resx">
