--- a/pwiz_tools/Skyline/Skyline.csproj
+++ b/pwiz_tools/Skyline/Skyline.csproj
@@ -337,6 +337,7 @@
       <DependentUpon>CommandArgUsage.resx</DependentUpon>
     </Compile>
     <Compile Include="Controls\Alignment\Cache.cs" />
+    <Compile Include="Controls\Alignment\CurveResult.cs" />
     <Compile Include="Controls\Alignment\CurveSettings.cs" />
     <Compile Include="Controls\Alignment\RetentionTimeSource.cs" />
     <Compile Include="Controls\Alignment\RunAlignmentResources.Designer.cs">
