--- a/pwiz_tools/Skyline/Skyline.csproj
+++ b/pwiz_tools/Skyline/Skyline.csproj
@@ -337,6 +337,7 @@
       <DependentUpon>CommandArgUsage.resx</DependentUpon>
     </Compile>
     <Compile Include="Controls\Alignment\Cache.cs" />
+    <Compile Include="Controls\Alignment\CurveFormat.cs" />
     <Compile Include="Controls\Alignment\CurveResult.cs" />
     <Compile Include="Controls\Alignment\CurveSettings.cs" />
     <Compile Include="Controls\Alignment\RetentionTimeSource.cs" />
@@ -740,17 +741,17 @@
     <Compile Include="Model\Results\Spectra\SpectrumClassKey.cs" />
     <Compile Include="Model\Results\Spectra\SpectrumMetadataList.cs" />
     <Compile Include="Model\Results\Spectra\SpectrumPrecursors.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="GenericFormClassNames.cs" />
     <Compile Include="Controls\Graphs\MsGraphExtension.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controls\Graphs\MsGraphExtension.Designer.cs">
       <DependentUpon>MsGraphExtension.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="SettingsUI\ViewLibraryPepInfoList.cs" />
     <Compile Include="Model\Lib\LibKeyMap.cs" />
@@ -3857,6 +3858,7 @@
     <None Include="Resources\Cluster.ico" />
     <None Include="Resources\Close.bmp" />
     <None Include="Resources\PanoramaDownload.bmp" />
+    <Content Include="Resources\AddNewPlot.bmp" />
     <Content Include="SkylineDocPointer.ico" />
     <EmbeddedResource Include="Resources\prosit_logo_dark_blue.png" />
     <Content Include="SkylineProcessRunner.exe">
