--- a/pwiz_tools/Skyline/TestData/TestData.csproj
+++ b/pwiz_tools/Skyline/TestData/TestData.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Results\TimeIntensitiesTest.cs" />
     <Compile Include="Results\WatersCalcurveTest.cs" />
     <Compile Include="Results\WatersImsMseTest.cs" />
+    <Compile Include="SpectrumSummaryTest.cs" />
     <Compile Include="XmlValidationTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -225,6 +226,10 @@
     <ProjectReference Include="..\..\Shared\ProteowizardWrapper\ProteowizardWrapper.csproj">
       <Project>{DACEE7D5-5A6A-4001-9602-FAB1A9A2DE59}</Project>
       <Name>ProteowizardWrapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Shared\zedgraph\ZedGraph.csproj">
+      <Project>{B99650EE-AF46-47B4-A4A9-212ADE7809B7}</Project>
+      <Name>ZedGraph</Name>
     </ProjectReference>
     <ProjectReference Include="..\Skyline.csproj">
       <Project>{DDA2EA4C-B632-4FDF-94BA-F71E4C152056}</Project>
