Add new class "LineReader" which has variants for TextReader and Stream and keeps track of which line it is on. This enables providing progress without having to first count all of the lines in the file.

--- a/pwiz_tools/Shared/CommonUtil/CommonUtil.csproj
+++ b/pwiz_tools/Shared/CommonUtil/CommonUtil.csproj
@@ -169,6 +169,7 @@
     <Compile Include="SystemUtil\FileSizeFormatProvider.cs" />
     <Compile Include="SystemUtil\IFormView.cs" />
     <Compile Include="SystemUtil\ItemDescription.cs" />
+    <Compile Include="SystemUtil\LineReader.cs" />
     <Compile Include="SystemUtil\ProcessEx.cs" />
     <Compile Include="SystemUtil\StreamEx.cs" />
     <Compile Include="SystemUtil\StringSearch.cs" />
