--- a/pwiz_tools/Shared/MSGraph/MSGraph.csproj
+++ b/pwiz_tools/Shared/MSGraph/MSGraph.csproj
@@ -83,7 +83,9 @@
     <Compile Include="HeatMapGraphPane.cs" />
     <Compile Include="LabelBoundsCache.cs" />
     <Compile Include="MSGraphItem.cs" />
-    <Compile Include="MSGraphControl.cs" />
+    <Compile Include="MSGraphControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="MSGraphControl.Designer.cs">
       <DependentUpon>MSGraphControl.cs</DependentUpon>
     </Compile>
