SpectrumSummaryList performance improvements

--- a/pwiz_tools/Skyline/TestData/TestData.csproj
+++ b/pwiz_tools/Skyline/TestData/TestData.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Results\TimeIntensitiesTest.cs" />
     <Compile Include="Results\WatersCalcurveTest.cs" />
     <Compile Include="Results\WatersImsMseTest.cs" />
+    <Compile Include="SpectrumSummaryTest.cs" />
     <Compile Include="XmlValidationTest.cs" />
   </ItemGroup>
   <ItemGroup>
