--- a/.gitignore
+++ b/.gitignore
@@ -462,3 +462,4 @@ SkylineTester Results
 /pwiz_tools/Skyline/Test/ProtocolBuffers/tmp/*.cs
 /pwiz_tools/Skyline/Test/ProtocolBuffers/tmp
 /pwiz_aux/msrc/utility/vendor_api/ABI/SCIEX.Apis.Data.v1.xml
+/pwiz_tools/Skyline/TestData/SssFullData.zip
