--- a/pwiz_tools/Skyline/Skyline.csproj
+++ b/pwiz_tools/Skyline/Skyline.csproj
@@ -435,6 +435,12 @@
     <Compile Include="Controls\TargetColumn.cs" />
     <Compile Include="Controls\ImmediateWindowWarningListener.cs" />
     <Compile Include="Controls\TreeViewMSStateRestorer.cs" />
+    <Compile Include="EditUI\AlignmentDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditUI\AlignmentDlg.Designer.cs">
+      <DependentUpon>AlignmentDlg.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditUI\EditLinkedPeptidesDlg.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -2961,6 +2967,9 @@
     <EmbeddedResource Include="EditUI\AddPeakCompareDlg.zh-CHS.resx">
       <DependentUpon>AddPeakCompareDlg.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditUI\AlignmentDlg.resx">
+      <DependentUpon>AlignmentDlg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EditUI\AssociateProteinsDlg.ja.resx">
       <DependentUpon>AssociateProteinsDlg.cs</DependentUpon>
