Changed so that values like "Normalized Area", "Calculated Concentration" and "Protein Abundance" have a value in the Document Grid even if there are missing or truncated transitions. A warning is displayed in the Document Grid in cases where the value would have been null.

--- a/pwiz_tools/Skyline/Skyline.csproj
+++ b/pwiz_tools/Skyline/Skyline.csproj
@@ -527,6 +527,7 @@
       <DependentUpon>ColumnToolTips.resx</DependentUpon>
     </Compile>
     <Compile Include="Model\Databinding\SurrogateStandardDataGridViewColumn.cs" />
+    <Compile Include="Model\DocSettings\AbsoluteQuantification\AnnotatedValue.cs" />
     <Compile Include="Model\DocumentModifier.cs" />
     <Compile Include="Model\FullScanPropertiesRes.Designer.cs">
       <AutoGen>True</AutoGen>
