--- a/pwiz_tools/Shared/Common/Common.csproj
+++ b/pwiz_tools/Shared/Common/Common.csproj
@@ -352,6 +352,7 @@
     <Compile Include="DataBinding\TransformResults.cs" />
     <Compile Include="DataBinding\Layout\ColumnId.cs" />
     <Compile Include="DataBinding\Layout\ViewLayout.cs" />
+    <Compile Include="DataBinding\NumberWithError.cs" />
     <Compile Include="DataBinding\ViewGroup.cs" />
     <Compile Include="DataBinding\ViewInfo.cs" />
     <Compile Include="DataBinding\ViewSpecLayout.cs" />
