--- a/pwiz_tools/Shared/Common/Common.csproj
+++ b/pwiz_tools/Shared/Common/Common.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Database\SqliteOperations.cs" />
     <Compile Include="DataBinding\AbstractViewContext.cs" />
     <Compile Include="DataBinding\AggregateOperation.cs" />
+    <Compile Include="DataBinding\AnnotatedValue.cs" />
     <Compile Include="DataBinding\Attributes\ColumnCaptionAttribute.cs" />
     <Compile Include="DataBinding\Attributes\ExpensiveAttribute.cs" />
     <Compile Include="DataBinding\Attributes\FilterableAttribute.cs" />
