--- a/pwiz_tools/Skyline/Executables/DevTools/ResourcesOrganizer/Test/Test.csproj
+++ b/pwiz_tools/Skyline/Executables/DevTools/ResourcesOrganizer/Test/Test.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <LangVersion>12.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
