--- a/pwiz_tools/Skyline/Executables/DevTools/ResourcesOrganizer/ResourcesOrganizer/ResourcesOrganizer.csproj
+++ b/pwiz_tools/Skyline/Executables/DevTools/ResourcesOrganizer/ResourcesOrganizer/ResourcesOrganizer.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Data.SQLite">
       <HintPath>..\lib\sqlite\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="System.Resources.Extensions">
+      <HintPath>..\lib\System.Resources.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Security.Permissions">
       <HintPath>..\lib\System.Security.Permissions.dll</HintPath>
     </Reference>
